<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_md3"
        app:showAsAction="ifRoom"
        app:iconTint="#FF0000"
        android:visible="false" />
    <item
        android:id="@+id/action_search"
        android:title="@string/search_photos"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_select"
        android:title="@string/select"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_grid_columns"
        android:title="@string/grid_columns"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_col_1" android:title="@string/column_1" />
            <item android:id="@+id/action_col_2" android:title="@string/column_2" />
            <item android:id="@+id/action_col_3" android:title="@string/column_3" />
            <item android:id="@+id/action_col_4" android:title="@string/column_4" />
        </menu>
    </item>
    <item
        android:id="@+id/action_sort_order"
        android:title="@string/sort_order"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_sort_name_asc" android:title="@string/sort_name_asc" />
            <item android:id="@+id/action_sort_name_desc" android:title="@string/sort_name_desc" />
            <item android:id="@+id/action_sort_date_desc" android:title="@string/sort_date_desc" />
            <item android:id="@+id/action_sort_date_asc" android:title="@string/sort_date_asc" />
        </menu>
    </item>
    <item
        android:id="@+id/action_rotation_lock"
        android:title="@string/rotation_lock"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_version"
        android:title="v1.2.4"
        android:enabled="false"
        app:showAsAction="never" />
</menu>
